syntax = "proto3";

package audit;

import "google/protobuf/timestamp.proto";

option go_package = "../pkg/domain/audit";

message logRequest {
    enum Action {
        REGISTER = 0;
        LOGIN = 1;
        CREATE = 2;
        UPDATE = 3;
        GET = 4;
        DELETE = 5;
    }

    enum Entities {
        USER = 0;
        BOOK = 1;
    }

    Action action = 1;
    Entities entity = 2;
    string entity_id = 3;
    google.protobuf.Timestamp timestamp = 4;
}

message Empty {
}

service AuditService {
    rpc Log(logRequest) returns (Empty){}
}